Revision history for DBIx::Class

    * Fixes
        - Fix parsing of DSNs containing driver arguments (GH#99)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Fix leaktest failures with upcoming version of Sub::Quote

0.082821 2016-02-11 17:58 (UTC)
    * Fixes
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)
        - Remove largely obsolete test of SQLite view deployment (RT#111916)

    * Misc
        - Work around rare test deadlock under heavy parallelism (RT#108390)

0.082820 2015-03-20 20:35 (UTC)
    * Fixes
        - Protect destructors from rare but possible double execution, and
          loudly warn the user whenever the problem is encountered (GH#63)
        - Relax the 'self_result_object' argument check in the relationship
          resolution codepath, restoring exotic uses of inflate_result
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011876.html
        - Fix updating multiple CLOB/BLOB columns on Oracle
        - Fix exception on complex update/delete under a replicated setup
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011903.html
        - Fix uninitialized warnings on empty hashes passed to join/prefetch
          https://github.com/vanstyn/RapidApp/commit/6f41f6e48 and
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-February/011921.html
        - Fix hang in t/72pg.t when run against DBD::Pg 3.5.0. The ping()
          implementation changes due to RT#100648 made an alarm() based
          timeout lock-prone.

    * Misc